# Inertia-MolecularDynamics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: CI.yml  test.yml
include/: Constants.h  Graph.h  Molecule.h  Physics.h  Vector.h  Visualization.h
src/: Constants.cpp  Graph.cpp  Molecule.cpp  Physics.cpp  Vector.cpp  Visualization.cpp
template/: Constants.cpp  Constants.h  Graph.cpp  Graph.h  Makefile  Molecule.cpp  Molecule.h  Physics.cpp  Physics.h  Vector.cpp  Vector.h  Visualization.cpp  Visualization.h  Vizualization.cpp  main.cpp  run.sh
template/test/: Makefile  Test.cpp  test.sh
test/: CMakeLists.txt  Test.cpp
